<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.feedback.FeedbackFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/feedbackIssueInputLatyout"
        android:layout_width="385dp"
        android:layout_height="66dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/colorAccent"
        app:boxBackgroundColor="@android:color/white"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/feedbackIssueInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feedback_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="10dp"
        android:text="@string/feedback_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedbackIssueInputLatyout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/feedbackEmailInputLayout"
        android:layout_width="385dp"
        android:layout_height="66dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorAccent"
        app:boxBackgroundColor="@android:color/white"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/feedbackEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feedback_hint_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="10dp"
        android:text="@string/feedback_note_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedbackEmailInputLayout" />

    <Button
        android:id="@+id/button"
        android:layout_width="385dp"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:backgroundTint="@color/colorPrimaryBlue"
        android:text="@string/send"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedbackEmailInputLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>